# Datawarehouse-and-DSS-for-Customer-churn-rate-and-classification

./: .env.example  .gitignore  EDA.ipynb  README.md  desktop.ini  requirements.txt
my_project/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
my_project/classification/: classification.ipynb  classification.md
my_project/elt-pipeline/: __init__.py
my_project/elt_pipeline/: connection.py
my_project/elt_pipeline/abc/: .user.yml  Initiate_GOLD.md  Initiate_SILVER.md  README.md  Roadmap-Silver.md  Updated_Data_Vault_Implementation_Guide.md  dbt_project.yml  profiles.yml
my_project/elt_pipeline/abc/macros/: generate_schema_name.sql  safe_divide.sql
my_project/elt_pipeline/abc/models/gold/dims/: dim_address.sql  dim_customer.sql  dim_date.sql  dim_product.sql  dim_specialoffer.sql  dim_territory.sql  schema.yml
my_project/elt_pipeline/abc/models/gold/facts/: fact_customer_churn.sql  fact_customers_churn.sql  fact_sales_order_line.sql  schema.yml
my_project/elt_pipeline/abc/models/silver/hubs/: hub_address.sql  hub_customer.sql  hub_person.sql  hub_product.sql  hub_salesorder.sql  hub_special_offer.sql  hub_territory.sql  schema.yml
my_project/elt_pipeline/abc/models/silver/links/: link_customer_order.sql  link_customer_person.sql  link_customer_territory.sql  link_order_product.sql  link_person_address.sql  schema.yml
my_project/elt_pipeline/abc/models/silver/sats/: sat_address_details.sql  sat_order_product_link.sql  sat_person_contact.sql  (+5 more)
my_project/elt_pipeline/ingest/: psql_ingest.py
(+13 files in other folders)
