[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "psycopg2>=2.9.11",
    "pyodbc>=5.3.0",
    "pypyodbc>=1.3.6",
    "rich>=14.2.0",
]
